--- a/TimeSeriesAnalysis.Rmd
+++ b/TimeSeriesAnalysis.Rmd
@@ -23,6 +23,8 @@ Data for COVID19 updated until April 1st, 2020 comes from [COVID19-TIMESERIES](h
 Data for Daily testing from [COVID19-TESTING](https://ourworldindata.org/covid-testing)
 [COVID19-TESTING-Sources](https://ourworldindata.org/covid-testing#source-information-country-by-country)
 
+Data for european measures can be found in [Report COVID19 Europe](https://www.imperial.ac.uk/media/imperial-college/medicine/mrc-gida/2020-03-30-COVID19-Report-13.pdf)
+
 ```{r load, include=FALSE}
 result <- fromJSON(file = "timeseries2.json") # data from the COVID19
 testing <- read.csv("covid19test.csv", header = TRUE)
@@ -40,7 +42,7 @@ Analysis in trending changes is conducted using the causal analysis library. Mor
 [Causal Impact](https://research.google/pubs/pub41854/)
 [Paper](https://projecteuclid.org/download/pdfview_1/euclid.aoas/1430226092)
 
-Analysis is conducted over the discrete derivative of the log(cases), as cases are exponentially distributed the log will result in the linear trend and the derivative will show the pendent. The time series will analyze increasing or decreasing trends on the pendent of the exponential growth rate.
+Analysis is conducted over the discrete derivative of the logarithmic of the ratio between the cumulative confirmed cases vs. the total testing, as cases are exponentially distributed the log will result in the linear trend and the derivative will show the pendent. The time series will analyze increasing or decreasing trends on the pendent of the exponential growth rate.
 
 ```{r processing, include=TRUE, warning=FALSE}
 Country <- "Italy" # Select the country
@@ -164,7 +166,8 @@ plot(
   xaxt="n",
   xlab="",
   ylab = "confirmed cases",
-  ylim = c(0, topval)
+  ylim = c(0, topval),
+  main = paste(Country, "Analysis of cumulative confirmed vs. cumulative testing", sep = " ")
 )
 polygon(pvaluesig_ind, p_value_area*10**10, col=c("#0C92C255","black"), border=1)
 points(
@@ -178,7 +181,7 @@ points(
   cex=1,
 )
 abline(
-  v=20,
+  v=24.5,
   col="purple",
   pch=18,
   lwd=2,
