--- a/TimeSeriesAnalysis.Rmd
+++ b/TimeSeriesAnalysis.Rmd
@@ -18,7 +18,7 @@ graphics.off()
 ```
 
 ## Data Sources
-Data for COVID19 updated until April 1st, 2020 comes from [COVID19-TIMESERIES](https://pomber.github.io/covid19/timeseries.json).
+Data for COVID19 updated until April 6th, 2020 comes from [COVID19-TIMESERIES](https://pomber.github.io/covid19/timeseries.json).
 
 Data for Daily testing from [COVID19-TESTING](https://ourworldindata.org/covid-testing)
 [COVID19-TESTING-Sources](https://ourworldindata.org/covid-testing#source-information-country-by-country)
@@ -26,8 +26,9 @@ Data for Daily testing from [COVID19-TESTING](https://ourworldindata.org/covid-t
 Data for european measures can be found in [Report COVID19 Europe](https://www.imperial.ac.uk/media/imperial-college/medicine/mrc-gida/2020-03-30-COVID19-Report-13.pdf)
 
 ```{r load, include=FALSE}
-result <- fromJSON(file = "timeseries2.json") # data from the COVID19
-testing <- read.csv("covid19test.csv", header = TRUE)
+result <- fromJSON(file = "timeseries3.json") # data from the COVID19
+testing <- read.csv("covid19test2.csv", header = TRUE)
+testing_permillion <- read.csv("covid19test_permillion.csv", header = TRUE)
 ```
 
 ## Processing the data
@@ -45,7 +46,8 @@ Analysis in trending changes is conducted using the causal analysis library. Mor
 Analysis is conducted over the discrete derivative of the logarithmic of the ratio between the cumulative confirmed cases vs. the total testing, as cases are exponentially distributed the log will result in the linear trend and the derivative will show the pendent. The time series will analyze increasing or decreasing trends on the pendent of the exponential growth rate.
 
 ```{r processing, include=TRUE, warning=FALSE}
-Country <- "Korea, South" # Select the country
+Country <- "Italy" # Select the country
+Country2 <- "Italy"
 ResultsByCountry <- result[[Country]] 
 CountryNamesList <- strsplit(as.character(testing$Entity), " - ")
 CountryName <- c()
@@ -54,15 +56,19 @@ for (element in CountryNamesList){
 }
 testing$Country <- CountryName
 
-TestByCountry <- testing[testing$Country == "South Korea",] # select country (pendent for creating a 
+TestByCountry <- testing[testing$Country == Country2,] # select country (pendent for creating a 
 TestByCountry$TestDate <- as.Date(TestByCountry$Date,format='%B %d, %Y')
 TestByCountry$DailyTest <- c(TestByCountry$Cumulative.total.tests[1],diff(TestByCountry$Cumulative.total.tests))
+
+TestByCountry_pm <- testing_permillion[testing$Country == Country2,] # select country (pendent for creating a
+TestByCountry_pm$TestDate <- as.Date(TestByCountry$Date,format='%B %d, %Y')
 
 dates <- c()
 deaths <- c()
 recovered <- c()
 confirmed <- c()
 tests <- c()
+tests_pm <- c()
 
 for(element in ResultsByCountry){
   currentDate <- as.Date(element$date)
@@ -72,45 +78,69 @@ for(element in ResultsByCountry){
   confirmed <- c(confirmed, element$confirmed)
 
   if(currentDate %in% TestByCountry$TestDate){
-    if (TestByCountry[TestByCountry$TestDate==currentDate,]$DailyTest == 0){
-      tests <- c(tests, NA)  
-    } else {
-      tests <- c(tests, TestByCountry[TestByCountry$TestDate==currentDate,]$DailyTest)  
-    }
+    tests <- c(tests, TestByCountry[TestByCountry$TestDate==currentDate,]$Cumulative.total.tests)
+    tests_pm <- c(tests_pm, TestByCountry_pm[TestByCountry_pm$TestDate==currentDate,]$Cumulative.total.tests)
   } else {
     tests <- c(tests, NA)
+    tests_pm <- c(tests_pm, NA)
   }
 }
 
-testts <- ts(tests)
-if(is.na(testts[1])){
-  testts[1]=testts[!is.na(testts)][1]*.3
+data_frame_analysis <- data.frame(dates = as.Date(dates), deaths = deaths, recovered = recovered, confirmed = confirmed, tests = tests, test_pm = tests_pm)
+
+counter <- 0
+temp <- rep(TRUE, length(data_frame_analysis$tests))
+for (element in data_frame_analysis$tests){
+  counter <- counter + 1
+  if(is.na(element)){
+    temp[counter] <- FALSE
+  } else {
+    break
+  }
 }
-testtsint <- na.interpolation(testts)
-testtsint[testtsint==0]<-1
-cumulated <- confirmed/cumsum(testtsint)
+counter <- length(data_frame_analysis$tests)
+for (element in rev(data_frame_analysis$tests)){
+  if(is.na(element)){
+    temp[counter] <- FALSE
+  } else {
+    break
+  }
+  counter <- counter - 1
+}
 
-CasesAdjusted <- cumulated # Select between confirmed, recovered, deaths, cumulated
+data_frame_analysis_temp <- data_frame_analysis[temp,]
+data_frame_analysis_temp$time <- 1:length(data_frame_analysis_temp$tests)
+data_frame_analysis_temp$tests_int <- na.kalman(data_frame_analysis_temp$tests)
+data_frame_analysis_temp$tests_pm_int <- na.kalman(data_frame_analysis_temp$test_pm)
+data_frame_analysis_complete <- data_frame_analysis_temp
+dates <- data_frame_analysis_complete$dates
+
+cumulated <- data_frame_analysis_complete$confirmed/data_frame_analysis_complete$tests_int # cumsum confirmed vs. cumsum testing
+analysis <- cumulated # Select between confirmed, recovered, deaths, cumulated
+
+# Analysis is the rate of change of confirmed/testing (speed)
+
+CasesAdjusted <- analysis
 timeseries_Real_T <- ts(CasesAdjusted, start = 1, end = length(CasesAdjusted))
-
 n <- 2
 interval <- 3
 
 dates_resample <- dates[seq(1, length(dates)-n, n)]
-
 timeseries_resample <- timeseries_Real_T[seq(1,length(timeseries_Real_T)-n, n)]
-testtsint_resample <- testtsint[seq(1,length(testtsint)-n, n)]
+testtsint_resample <- data_frame_analysis_complete$tests_int[seq(1,length(data_frame_analysis_complete$tests_int)-n, n)]
 
-# timeseries_resample <- timeseries_resample / testtsint_resample
+testtsint_resample_pm <- data_frame_analysis_complete$tests_pm_int[seq(1,length(data_frame_analysis_complete$tests_pm_int)-n, n)]
 
-timeseries_resample_log <- log(timeseries_resample+1)
-testtsint_resample_log <- log(testtsint_resample+1)
+dataSMA <- timeseries_resample
+# dataSMA <- log(dataSMA)
+# dataSMA <- c(0,diff(dataSMA)) # Speed
+dataSMA <- c(0, c(0,diff(dataSMA))) # Accel
+data <- dataSMA
 
-dataSMA <- SMA(timeseries_resample_log,n=4)
-data <- diff(dataSMA)
-
-datatestingSMA <- SMA(testtsint_resample_log,n=4)
-datatesting <- diff(datatestingSMA)
+datatestingSMA <- testtsint_resample
+# datatestingSMA <- c(0,diff(datatestingSMA)) # Speed
+datatestingSMA <- c(0, c(0,diff(datatestingSMA))) # Accel
+datatesting <- datatestingSMA
 
 data_scaled <- data
 
@@ -121,40 +151,43 @@ pvaluesig_ind <- c()
 pvaluesig2_ind <- c()
 modelbest_ind <- c()
 modelbest_ind_report <- c()
+pvaluesig_date <- c()
 
 for (element in seq(startint, endint - 2 * interval, 1)){
   testperiod <- element + interval
   pre.period <- c(testperiod-interval, testperiod)
-  post.period <- c(testperiod+1, testperiod+interval)
+  post.period <- c(testperiod+1, testperiod+1+interval)
   impact <- CausalImpact(data_scaled, pre.period, post.period)
   pvalue <- impact$summary$p[1]
   if(is.null(pvalue)){
     pvaluesig2_ind <- c(pvaluesig2_ind, 1)
     modelbest_ind_report[length(modelbest_ind_report)+1] <- NA
+    modelbest_ind[length(modelbest_ind)+1] <- NA
   } else {
     pvaluesig2_ind <- c(pvaluesig2_ind, pvalue)
     modelbest_ind_report[length(modelbest_ind_report)+1] <- impact$report
+    modelbest_ind[length(modelbest_ind)+1] <- impact$summary
   }
   pvaluesig_ind <- c(pvaluesig_ind, testperiod)
-  # modelbest_ind[length(modelbest_ind)+1] <- impact
+  # pvaluesig_date <- c(pvaluesig_date, dates_resample[testperiod])
 }
 
 p_value_area <- c()
 for (element in pvaluesig2_ind){
-  if(element < 0.005){
-    p_value_area <- c(p_value_area, 1000)
+  if(element < 0.05){
+    p_value_area <- c(p_value_area, 1)
   } else {
     p_value_area <- c(p_value_area, 0)
   }
 }
 ```
-
+  
 ## Plotting results
 
 ```{r plot, include=TRUE}
 # topval <- max(timeseries_resample)
-topval <- 0.3
-par(mfrow=c(3,1))
+topval <- 0.5
+# par(mfrow=c(3,1))
 plot(
   1:length(timeseries_resample), 
   timeseries_resample, 
@@ -167,15 +200,16 @@ plot(
   xaxt="n",
   xlab="",
   ylab = "confirmed cases",
-  ylim = c(0, topval),
-  main = paste(Country, "Analysis of cumulative confirmed vs. cumulative testing", sep = " ")
+  ylim = c(0, max(max(timeseries_resample),topval)),
+  main = paste(Country, "cumulative confirmed vs. cumulative testing", sep = " "),
+  bty="n"
 )
 x.poly <- c(pvaluesig_ind, pvaluesig_ind[length(pvaluesig_ind)], pvaluesig_ind[1])
 y.poly <- c(p_value_area, 0, 0)
 polygon(x.poly, y.poly, col=c("#0C92C255"), border=1)
 points(
   1:length(testtsint_resample), 
-  cumsum(testtsint_resample)*(topval/max(cumsum(testtsint_resample))),
+  testtsint_resample*(topval/max(testtsint_resample)),
   type = "o",
   col="red",
   pch=18,
@@ -183,17 +217,17 @@ points(
   lty=1,
   cex=1,
 )
-abline(
-  v=17.5,
-  col="purple",
-  pch=18,
-  lwd=2,
-  lty=1
-)
+# abline(
+#   v=17.5,
+#   col="purple",
+#   pch=18,
+#   lwd=2,
+#   lty=1
+# )
 axis(
   1, 
-  at = 1:length(data), 
-  labels = dates_resample[-1], 
+  at = 1:length(dates_resample), 
+  labels = dates_resample, 
   las=2,
   cex.axis=0.7
   )
@@ -201,23 +235,24 @@ scale <- 0.05
 axis(
   4, 
   at = seq(0,topval, scale), 
-  labels = seq(0,max(cumsum(testtsint_resample)), max(cumsum(testtsint_resample))/length(seq(0,topval, scale)))[1:length(seq(0,topval, scale))], 
-  las=2,
-  cex.axis=0.3
+  labels = round(seq(0,max(cumsum(testtsint_resample_pm)), max(cumsum(testtsint_resample_pm))/length(seq(0,topval, scale)))[1:length(seq(0,topval, scale))], 0), 
+  las=1,
+  cex.axis=0.5,
+  pos = length(dates_resample) + 0.5
   )
 legend(
   "topleft", 
-       legend=c("Cumulative cases pos. rate",
-                "Testing",
-                "lockdown started"
+       legend=c("cases/testing",
+                "Testing per million (right axis)"
+                # "lockdown started"
                 ),
-       col=c("black", "red", "purple"), 
-       lty=c(1, 1, 1),
-       lwd=c(2, 2, 2),
+       col=c("black", "red"), 
+       lty=c(1, 1),
+       lwd=c(2, 2),
        cex=0.6,
-       pch=c(18, 18, NA),
-       bty = "n",
-       pt.cex = c(1,1,1)
+       pch=c(18, 18),
+       # bty = "n",
+       pt.cex = c(1,1)
 )
 plot(
   1:length(data_scaled), 
@@ -231,34 +266,20 @@ plot(
   xaxt="n",
   xlab="",
   ylab = "trending pendent", #  d(log(cases))/dt
-  ylim = c(min(data_scaled[!is.na(data_scaled)]),max(max(data_scaled[!is.na(data_scaled)]),max(datatesting[!is.na(datatesting)]*0.01)))
+  # ylim = c(min(data_scaled[!is.na(data_scaled)]),max(max(data_scaled[!is.na(data_scaled)]),max(datatesting[!is.na(datatesting)]*0.001)))
 )
 polygon(x.poly, y.poly, col=c("#0C92C255"), border=1)
-axis(1, at = 1:length(data), labels =dates_resample[-1], las=2, cex.axis=0.7)
-points(
-  1:length(datatesting), 
-  datatesting*0.01,
-  type = "o",
-  col="red",
-  pch=18,
-  lwd=2,
-  lty=1,
-  cex=1,
-)
-# cbind(pvaluesig_ind, pvaluesig2_ind, p_value_area)
-plot(
-  cumulated,
-  type = "o",
-  col="orange",
-  pch=18,
-  lwd=2,
-  lty=1,
-  cex=1,
-  xaxt="n",
-  ylim = c(0,topval),
-  xlab = ""
-  )
-axis(1, at = 1:length(dates), labels =dates, las=2, cex.axis=0.7)
+axis(1, at = 1:length(dates_resample), labels =dates_resample, las=2, cex.axis=0.7)
+# points(
+#   1:length(datatesting), 
+#   datatesting*0.01,
+#   type = "o",
+#   col="red",
+#   pch=18,
+#   lwd=2,
+#   lty=1,
+#   cex=1,
+# )
 
 ```
 
@@ -266,9 +287,9 @@ Blue areas are time periods where the p-value of the trending change resulted in
 
 
 ```{r summary}
-
-# Country
-# modelbest_ind_report[24]
-# dates_resample[24]
-
+date_analysis <- 19
+Country
+modelbest_ind[date_analysis]
+modelbest_ind_report[date_analysis]
+dates_resample[date_analysis]
 ```
